# big_data_final_project

./: .~lock.ML_AB_Class_Project_Proposals_Summary.xlsx#  .~lock.W14_presentation.docx#  README.md  air_quality_pipeline.ipynb  final_project.ipynb  geo_cache.json  new_new_final_project.ipynb  pyproject.toml  waqi_cache.json
.ipynb_checkpoints/: air_quality_pipeline-checkpoint.ipynb  air_quality_pipeline_executed-checkpoint.ipynb  big-data-final-project-checkpoint.ipynb  final_project-checkpoint.ipynb  new_final_project-checkpoint.ipynb
daily_updates/: daily_update_air_quality_2025-12-09.csv  daily_update_air_quality_2025-12-10.csv  daily_update_air_quality_2025-12-11.csv  daily_update_air_quality_2025-12-12.csv  daily_update_air_quality_2025-12-13.csv  daily_update_air_quality_2025-12-14.csv  daily_update_air_quality_2025-12-15.csv  daily_update_air_quality_2025-12-16.csv  daily_update_air_quality_2025-12-17.csv  daily_update_air_quality_2025-12-18.csv  daily_update_air_quality_2025-12-19.csv  daily_update_air_quality_2025-12-20.csv  daily_update_air_quality_2025-12-21.csv  daily_update_air_quality_2025-12-22.csv  daily_update_air_quality_2025-12-23.csv  daily_update_air_quality_2025-12-24.csv  daily_update_air_quality_2025-12-25.csv  daily_update_air_quality_2025-12-26.csv  daily_update_air_quality_2025-12-27.csv  daily_update_air_quality_2025-12-28.csv  daily_update_air_quality_2025-12-29.csv  daily_update_air_quality_2025-12-30.csv  daily_update_air_quality_2025-12-31.csv  daily_update_air_quality_2026-01-01.csv  daily_update_air_quality_2026-01-02.csv  (+135 more)
(+2 files in other folders)
